Wheel Event Not Fired For `body,html { height:100% }` https://bugs.webkit.org/show_bug.cgi?id=148450

Reviewed by Brent Fulgham.

Source/WebCore:

EventHandler::handleWheelEvent() didn't pass the Active flag in the HitTestRequest,
which causes code in RenderLayer::hitTest() to fail to fall back to returning the
root layer if no other element is hit. "Active" is in the default flags,
so just create the HitTestRequest with the default flags.

Test: fast/events/wheel-event-outside-body.html

* page/EventHandler.cpp:
(WebCore::EventHandler::handleWheelEvent):

LayoutTests:

Testcase, skipped on iOS which doesn't support wheel events.

* fast/events/wheel-event-outside-body-expected.txt: Added.
* fast/events/wheel-event-outside-body.html: Added.
* platform/ios-simulator/TestExpectations:


Canonical link: https://commits.webkit.org/175287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200247 268f45cc-cd09-0410-ab3c-d52691b4dbfc